--- a/app/clock.module.css
+++ b/app/clock.module.css
@@ -8,8 +8,17 @@
     background-color: #f0f0f0;
 }
 
+.container h1 {
+    text-align: center;
+    margin-top: 0px;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #333;
+}
+
 .clock {
     position: relative;
+    margin-top: 20px;
     width: 300px;
     height: 300px;
     border: 10px solid #333;
@@ -88,6 +97,7 @@
 .timeDisplay p {
     font-size: 2rem;
     font-weight: bold;
+    
     color: #333;
 }
 
@@ -97,4 +107,8 @@
     border: none;
     cursor: pointer;
     margin-left: 10px;
+}
+
+.timeDisplay .showTimeButton {
+    margin-top: 10px;
 }
